--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
 #buttons {
     margin-bottom: 25px;
 }
+
+body {
+    background-image: url(background.jpg);
+    background-size: contain;
+}
+
+.button{
+    position : relative ;
+    z-index : 0 ;
+    width : 240px ;
+    height : 56px ;
+    text-decoration : none ;
+    font-size : 18px ; 
+    font-weight : bold ;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+}
+
+.task-button {
+    position : relative ;
+    z-index : 0 ;
+    width : 120px ;
+    height : 25px ;
+    text-decoration : none ;
+    font-size : 10px ; 
+    font-weight : bold ;
+    color : var(--line_color) ;
+    letter-spacing : 2px ;
+    transition : all .3s ease ;
+}
+
+p {
+    color: white;
+}
+
